--- a/html/gow-r.html
+++ b/html/gow-r.html
@@ -45,7 +45,7 @@
    <div class="container mt-5 mb-5"><!--Container -->
       <div class="row "><!--Row -->
         <div class="col-sm-8 mx-auto "><!--col-sm8 -->
-                  <div id="carousel-legenda" class="carousel slide" data-ride="carousel"><!--Carousel -->
+          <div id="carousel-legenda" class="carousel slide" data-ride="carousel"><!--Carousel -->
 
             <!-- Indicadores -->
             <ol class="carousel-indicators">
@@ -61,27 +61,16 @@
             <div class="carousel-inner rounded"><!--Inner -->
               
               <div class="carousel-item active">
-                <img src="../imagens/god1.gif" class="img-fluid " style="width:1280px; height:410px;">
-                <div class="carousel-caption">
-                  <div >
-                    <h3 class="text-capitalize text-dark fixed-top border-bottom border-dark w-75 mt-2">O inicio de tudo começa no fim</h3>
-                  </div>
-                </div>
-              </div>            
-               <div class="carousel-item ">
-                <img src="../imagens/god.jpg" class="img-fluid" style="width:1280px; height:410px;">
-                <div class="carousel-caption fixed-top w-100  h-100 pt-5 text-left " style="background:rgb(999,999,999,0.3);">
-                  <div  class="rounded border-bottom w-50" >
-                    <h3 class=" text-dark">Nem o destino <br>Impedira esses Dois</h3>
-                  </div>
-                </div>
+                <iframe class=" container" width="400" height="361" src="https://www.youtube.com/embed/x6oF3Jxu7X0" title="God Of War Ragnarok - Trailer de Revelação do PlayStation Showcase 2021 | PS5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
 
               <div class="carousel-item">
-                <img src="../imagens/imagem2.gif" class="img-fluid" style="width:1280px; height:410px;">
-                <div class="carousel-caption m-auto rounded"><br>
-                  <h3 >Venha Conferir!</h3>
-                </div>
+                <iframe class="container" width="642" height="361" src="https://www.youtube.com/embed/0N4J-7gsaGc" title="God of War Ragnarök - Trailer Cinematográfico: "Pai e Filho"  | PS5, PS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+              </div>
+
+              <div class="carousel-item">
+                <iframe class="container" width="642" height="361" src="https://www.youtube.com/embed/_xBtCyg3Gyo" title="GOD OF WAR RAGNARÖK: TRAILER DE HISTÓRIA [DUBLADO]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
 
             </div><!--/Inner -->
@@ -157,7 +146,7 @@
       </div>
       <div class="card-body">
         <h4>Meu console</h4>
-        <p>Temos duas versões no mercado hoje <a class="text-warning" href="https://a.co/d/fAq9NKj">Playstation 5</a> e <a class="text-warning" href="https://a.co/d/aAGewLs">Playstation midia digital</a> Qual você ira adquirir ?</p>
+        <p>Temos duas versões no mercado hoje <a class="text-warning" href="https://a.co/d/fAq9NKj">Playstation 5</a> e <a class="text-warning" href="https://a.co/d/aAGewLs">Playstation midia digital</a> Qual você ira adquerir ?</p>
         <a class="btn btn-outline-light btn-block" href="">Saiba mais</a>
       </div>
     </div>
