--- a/html/gow-r.html
+++ b/html/gow-r.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="vai3">
           
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="" class="nav-link text-uppercase text-light font-weight-bold">Inicio</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link text-uppercase text-light font-weight-bold">Inicio</a></li>
 
           <li class="nav-item dropdown"><a href="" class="nav-link dropdown-toggle text-light text-uppercase font-weight-bold" data-toggle="dropdown">Sobre o jogo</a>
             <div class="dropdown-menu   ">
