--- a/html/gow-r.html
+++ b/html/gow-r.html
@@ -16,7 +16,8 @@
   <body class="m-0 "style="background: url(https://i.gifer.com/origin/58/58bcdf57d5cbae761e796df882903fbd.gif);background-size:cover;" >
 
     <nav class="navbar navbar-expand-sm navbar-light" style="background: #0c4484;">
-      <h1 class="navbar-brand text-uppercase font-weight-bold ">god of war<img src="../imagens/la.png" class="ml-2" style="width:100px; height: 30px;"></h1>
+      <h1 class="navbar-brand text-uppercase font-weight-bold "><img src="../imagens/la.png"style="width:100px; height: 30px;"> god of war<img src="../imagens/la.png" style="width:100px; height: 30px; transform:rotateX(180deg) rotate(180deg);"></h1>
+
 
       <button class="navbar-toggler" data-toggle="collapse" data-target="#vai3"><span class="navbar-toggler-icon"></span></button>
 
