--- a/html/personagens.html
+++ b/html/personagens.html
@@ -16,7 +16,7 @@
   <body class="m-0 "style="background: url(https://i.gifer.com/origin/58/58bcdf57d5cbae761e796df882903fbd.gif);background-size:cover;" >
 
     <nav class="navbar navbar-expand-sm navbar-light" style="background: #0c4484;">
-      <h1 class="navbar-brand text-uppercase font-weight-bold ">god of war<img src="../imagens/la.png" class="ml-2" style="width:100px; height: 30px;"></h1>
+      <h1 class="navbar-brand text-uppercase font-weight-bold "><img src="../imagens/la.png"style="width:100px; height: 30px;"> god of war<img src="../imagens/la.png" style="width:100px; height: 30px; transform:rotateX(180deg) rotate(180deg);"></h1>
 
       <button class="navbar-toggler" data-toggle="collapse" data-target="#vai3"><span class="navbar-toggler-icon"></span></button>
 
@@ -92,95 +92,95 @@
     <div class="card-columns ">
       
       <!-- inicio cartao -->
-      <div class="card text-white">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/cleitao.jpg">
-        <div class="card-img-overlay">
-          <p id="dados" class="collapse">O DEUS DA GUERRA ESTÁ DE VOLTA, E COMO O JOGO SE TRATA DE SUAS DESVENTURAS COM AS DIVINDADES, ELE SERÁ UM DOS PRINCIPAIS PERSONAGENS DE GOD OF WAR RAGNARÖK. JÁ NO TRAILER, O ESPARTANO É COBRADO POR ATREUS, SEU FILHO, PARA AGIR MAIS COMO UM GENERAL E PARAR DE PENSAR COMO UM PAI. CONFLITOS A CAMINHO?</p>
-          <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados">Saiba mais</button>
-
+        <div class="card-img-overlay d-flex align-items-end ">
+          <button class="btn btn-outline-danger  " data-toggle="collapse" data-target="#dados">Saiba mais</button>
+          <p id="dados" class="bg-light collapse h6 p-3" style="opacity: 0.7;">O DEUS DA GUERRA ESTÁ DE VOLTA, E COMO O JOGO SE TRATA DE SUAS DESVENTURAS COM AS DIVINDADES, ELE SERÁ UM DOS PRINCIPAIS PERSONAGENS DE GOD OF WAR RAGNARÖK. JÁ NO TRAILER, O ESPARTANO É COBRADO POR ATREUS, SEU FILHO, PARA AGIR MAIS COMO UM GENERAL E PARAR DE PENSAR COMO UM PAI. CONFLITOS A CAMINHO?</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-white">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/mimir.png">
-        <div class="card-img-overlay">
-        <p id="dados1" class="collapse text-uppercase">Mimir é o deus do conhecimento e da sabedoria e é um aliado de Kratos e Atreus. Ele era o conselheiro de Odin e embaixador dos deuses, até que Odin o aprisionou 109 anos atrás. Ele é o tritagonista de God of War.</p>
-          <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados1">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados1">Saiba mais</button>
+        <p id="dados1" class="collapse bg-light h6 p-3" style="opacity:0.7;">Mimir é o deus do conhecimento e da sabedoria e é um aliado de Kratos e Atreus. Ele era o conselheiro de Odin e embaixador dos deuses, até que Odin o aprisionou 109 anos atrás. Ele é o tritagonista de God of War.</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-success">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/atreus.png">
-        <div class="card-img-overlay">
-        <p id="dados2" class="collapse">APÓS DESCOBRIR SUA ORIGEM E SEU LUGAR ENTRE OS DEUSES, ATREUS RETORNA MAIS MADURO E DISPOSTO A EXPLORAR SEU DESTINO. O DILEMA COM SEU PAI AINDA PARECE PERSISTIR, MAS DESTA VEZ, O JOVEM PRECISA DESVENDAR QUAL O SEU PAPEL NO FIM DO MUNDO NÓRDICO. HÁ UMA PROFECIA, E TUDO SUGERE QUE O ADOLESCENTE SEJA REALMENTE LOKI, A CHAVE PARA O RAGNARÖK.</p>
+        <div class="card-img-overlay d-flex align-items-end">
           <button class="btn btn-outline-success" data-toggle="collapse" data-target="#dados2">Saiba mais</button>
+        <p id="dados2" class="collapse bg-light h6 p-3" style="opacity: 0.7;">APÓS DESCOBRIR SUA ORIGEM E SEU LUGAR ENTRE OS DEUSES, ATREUS RETORNA MAIS MADURO E DISPOSTO A EXPLORAR SEU DESTINO. O DILEMA COM SEU PAI AINDA PARECE PERSISTIR, MAS DESTA VEZ, O JOVEM PRECISA DESVENDAR QUAL O SEU PAPEL NO FIM DO MUNDO NÓRDICO. HÁ UMA PROFECIA, E TUDO SUGERE QUE O ADOLESCENTE SEJA REALMENTE LOKI, A CHAVE PARA O RAGNARÖK.</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-white">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/barril.jpg">
-        <div class="card-img-overlay">
-        <p id="dados3" class="collapse">O DEUS DO TROVÃO, FILHO DE ODIN, MEIO-IRMÃO DE BALDUR, E PAI DE MODI E MAGNI — AMBOS MORTOS POR ATREUS E KRATOS —, É OUTRO A BUSCAR VINGANÇA CONTRA OS PROTAGONISTAS. “VOCÊ É SEMPRE UMA PESSOA CALMA E SENSATA?”, É ASSIM QUE THOR SE DIRIGE AO FANTASMA DE ESPARTA NA ÚNICA INTERAÇÃO DISPONÍVEL NO TRAILER. ESPERAMOS BATALHAS ÉPICAS!</p>
-          <button class="btn btn-outline-danger" data-toggle="collapse" data-target="#dados3">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#dados3">Saiba mais</button>
+        <p id="dados3" class="collapse bg-light h6 p-3" style="opacity: 0.7;">O DEUS DO TROVÃO, FILHO DE ODIN, MEIO-IRMÃO DE BALDUR, E PAI DE MODI E MAGNI — AMBOS MORTOS POR ATREUS E KRATOS —, É OUTRO A BUSCAR VINGANÇA CONTRA OS PROTAGONISTAS. “VOCÊ É SEMPRE UMA PESSOA CALMA E SENSATA?”, É ASSIM QUE THOR SE DIRIGE AO FANTASMA DE ESPARTA NA ÚNICA INTERAÇÃO DISPONÍVEL NO TRAILER. ESPERAMOS BATALHAS ÉPICAS!</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-primary h5 ">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/angreboda.jpg">
-        <div class="card-img-overlay">
-        <p id="dados4" class="collapse">O LEGADO DOS GIGANTES PARECE NÃO TER ACABADO DE VEZ COM A PRESENÇA DESTA GAROTINHA. ANGRBODA, NA MITOLOGIA NÓRDICA, É UM DOS AMORES DA VIDA DE LOKI. COMO PODEMOS CONCLUIR QUE ELA SERÁ UMA DAS PRINCIPAIS PERSONAGENS DE GOD OF WAR RAGNARÖK? ELA SIMPLESMENTE FECHA O TRAILER DE REVELAÇÃO DIZENDO O SEGUINTE:VOCÊ TERÁ SUAS RESPOSTAS EM BREVE. BEM, ALGUMAS DELAS.</p>
-          <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#dados4">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-info" data-toggle="collapse" data-target="#dados4">Saiba mais</button>
+        <p id="dados4" class="collapse bg-light h6 p-3" style="opacity: 0.7;">O LEGADO DOS GIGANTES PARECE NÃO TER ACABADO DE VEZ COM A PRESENÇA DESTA GAROTINHA. ANGRBODA, NA MITOLOGIA NÓRDICA, É UM DOS AMORES DA VIDA DE LOKI. COMO PODEMOS CONCLUIR QUE ELA SERÁ UMA DAS PRINCIPAIS PERSONAGENS DE GOD OF WAR RAGNARÖK? ELA SIMPLESMENTE FECHA O TRAILER DE REVELAÇÃO DIZENDO O SEGUINTE:VOCÊ TERÁ SUAS RESPOSTAS EM BREVE. BEM, ALGUMAS DELAS.</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-white">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/sindri.jpg">
-        <div class="card-img-overlay">
-        <p id="dados5" class="collapse">O COMPLEMENTO DE BROK QUANDO SE TRATA DO CUIDADO COM AS ARMAS DE KRATOS E ATREUS. APÓS UM PERÍODO SEPARADOS NO PRIMEIRO JOGO DA SÉRIE NÓRDICA, ELES SE RESOLVEM E VOLTAM A TRABALHAR EM CONJUNTO NA OFICINA.</p>
-          <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados5">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-warning" data-toggle="collapse" data-target="#dados5">Saiba mais</button>
+        <p id="dados5" class="collapse bg-light h6 p-3" style="opacity: 0.7;">O COMPLEMENTO DE BROK QUANDO SE TRATA DO CUIDADO COM AS ARMAS DE KRATOS E ATREUS. APÓS UM PERÍODO SEPARADOS NO PRIMEIRO JOGO DA SÉRIE NÓRDICA, ELES SE RESOLVEM E VOLTAM A TRABALHAR EM CONJUNTO NA OFICINA.</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-white">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/brok.jpg">
-        <div class="card-img-overlay">
-        <p id="dados6" class="collapse">UM DOS ANÕES FERREIROS RESPONSÁVEIS POR DEIXAR OS EQUIPAMENTOS DA DUPLA MUITO BEM CUIDADOS. É O PRIMEIRO DOS IRMÃOS A APRIMORAR O LEVIATÃ E UM DOS ARTESÃOS POR TRÁS DO MACHADO.</p>
-          <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados6">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-warning" data-toggle="collapse" data-target="#dados6">Saiba mais</button>
+        <p id="dados6" class="collapse bg-light h6 p-3" style="opacity: 0.7;">UM DOS ANÕES FERREIROS RESPONSÁVEIS POR DEIXAR OS EQUIPAMENTOS DA DUPLA MUITO BEM CUIDADOS. É O PRIMEIRO DOS IRMÃOS A APRIMORAR O LEVIATÃ E UM DOS ARTESÃOS POR TRÁS DO MACHADO.</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-white">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/durlin.png">
-        <div class="card-img-overlay">
-        <p id="dados7" class="collapse">A PRESENÇA DE DURLIN NO TRAILER NÃO DEIXA BEM CLARO O QUE ELE REPRESENTARÁ DENTRO DO GAME. DURANTE SUA APARIÇÃO, KRATOS E ATREUS CONVERSAM SOBRE MEDIDAS PARA “ATRASAR O RAGNARÖK” E ENCONTRAR TYR. SERIA ELE UMA CHAVE PARA AS DEMAIS INFORMAÇÕES?</p>
-          <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados7">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-danger" data-toggle="collapse" data-target="#dados7">Saiba mais</button>
+        <p id="dados7" class="collapse bg-light h6 p-3" style="opacity: 0.7;">A PRESENÇA DE DURLIN NO TRAILER NÃO DEIXA BEM CLARO O QUE ELE REPRESENTARÁ DENTRO DO GAME. DURANTE SUA APARIÇÃO, KRATOS E ATREUS CONVERSAM SOBRE MEDIDAS PARA “ATRASAR O RAGNARÖK” E ENCONTRAR TYR. SERIA ELE UMA CHAVE PARA AS DEMAIS INFORMAÇÕES?</p>
         </div>
       </div>
       <!-- fim cartao -->
 
       <!-- inicio cartao -->
-      <div class="card text-light">
+      <div class="card text-dark">
         <img class="card-img" src="../imagens/freya.png">
-        <div class="card-img-overlay">
-        <p id="dados8" class="collapse">APÓS PERDER BALDUR, SEU FILHO, A FEITICEIRA PARECE ESTAR COM SEDE DE VINGANÇA E TEM TUDO PARA SER UMA DAS ANTAGONISTAS MAIS MEMORÁVEIS DA FRANQUIA. FREYA APARECE NO TRAILER EM UMA ABORDAGEM NADA AMISTOSA CONTRA KRATOS. COMO ESSA HISTÓRIA TERMINARÁ?</p>
-          <button class="btn btn-outline-light" data-toggle="collapse" data-target="#dados8">Saiba mais</button>
+        <div class="card-img-overlay d-flex align-items-end">
+        <button class="btn btn-outline-info" data-toggle="collapse" data-target="#dados8">Saiba mais</button>
+        <p id="dados8" class="collapse bg-light h6 p-3" style="opacity: 0.7;">APÓS PERDER BALDUR, SEU FILHO, A FEITICEIRA PARECE ESTAR COM SEDE DE VINGANÇA E TEM TUDO PARA SER UMA DAS ANTAGONISTAS MAIS MEMORÁVEIS DA FRANQUIA. FREYA APARECE NO TRAILER EM UMA ABORDAGEM NADA AMISTOSA CONTRA KRATOS. COMO ESSA HISTÓRIA TERMINARÁ?</p>
         </div>
       </div>
       <!-- fim cartao -->
+
 
       
     </div>
