--- a/html/historia.html
+++ b/html/historia.html
@@ -16,14 +16,15 @@
   <body class="m-0 "style="background: url(https://i.gifer.com/origin/58/58bcdf57d5cbae761e796df882903fbd.gif);background-size:cover;" >
 
     <nav class="navbar navbar-expand-sm navbar-light" style="background: #0c4484;">
-      <h1 class="navbar-brand text-uppercase font-weight-bold ">god of war<img src="../imagens/la.png" class="ml-2" style="width:100px; height: 30px;"></h1>
+      <h1 class="navbar-brand text-uppercase font-weight-bold "><img src="../imagens/la.png"style="width:100px; height: 30px;"> god of war<img src="../imagens/la.png" style="width:100px; height: 30px; transform:rotateX(180deg) rotate(180deg);"></h1>
+
 
       <button class="navbar-toggler" data-toggle="collapse" data-target="#vai3"><span class="navbar-toggler-icon"></span></button>
 
       <div class="collapse navbar-collapse" id="vai3">
           
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="" class="nav-link text-uppercase text-light font-weight-bold">Inicio</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link text-uppercase text-light font-weight-bold">Inicio</a></li>
 
           <li class="nav-item dropdown"><a href="" class="nav-link dropdown-toggle text-light text-uppercase font-weight-bold" data-toggle="dropdown">Sobre o jogo</a>
             <div class="dropdown-menu   ">
