atualização na imagen nuuvem

--- a/html/index.html
+++ b/html/index.html
@@ -173,9 +173,9 @@
     </div>
 
     <div class="card m-0 ">        
-      <img class="card-img " style="opacity:0.7; height: 200px;" src="../imagens/nuuvem.jpg">
+      <img class="card-img " style="opacity:0.4; height: 200px;" src="../imagens/nuuvem.webp">
         <div class="card-img-overlay  ">
-        <h4 class="card-title text-center ">Compre seus gift cards aqui !</h4>
+        <h4 class="card-title text-center border-bottom border-dark ">Compre seus gift cards aqui !</h4>
         <p class="card-text text-capitalize text-center bg-light rounded " style="opacity: 0.8;">Compre seus gifts cards aqui na <a href="https://www.nuuvem.com/lp/pt/playstation/#gift-card">nuuvem</a> na plataforma mais segura e eficiente do mundo !</p>
         <a class="btn btn-outline-dark" href="https://www.nuuvem.com/lp/pt/playstation/#gift-card">Saiba mais...</a>
       </div>
