--- a/html/index.html
+++ b/html/index.html
@@ -173,7 +173,7 @@
     </div>
 
     <div class="card m-0 ">        
-      <img class="card-img " style="opacity:0.4; height: 200px;" src="../imagens/nuuvem.webp">
+      <img class="card-img " style="opacity:0.4; height: 200px;" src="https://tm.ibxk.com.br/2020/12/23/23145832278011.jpg?ims=704x264">
         <div class="card-img-overlay  ">
         <h4 class="card-title text-center border-bottom border-dark ">Compre seus gift cards aqui !</h4>
         <p class="card-text text-capitalize text-center bg-light rounded " style="opacity: 0.8;">Compre seus gifts cards aqui na <a href="https://www.nuuvem.com/lp/pt/playstation/#gift-card">nuuvem</a> na plataforma mais segura e eficiente do mundo !</p>
